--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
 	<head>
 		<title>
-			Title Text
+			Pimmy_jit
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<header>
+		Nanthalak (Pim) JItnavasatien's Website 
 		</header>
 		<nav>
+		HALLOOOOOOOO
 		</nav>
 		<main>
+		Hope this work. 
 		</main>
 		<footer>
+		AI PUNCHHHHHHHHHHHHHHHHHH
 		</footer>
 	</body>
 </html>
