--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 		<header>
 		Nanthalak (Pim) JItnavasatien's Website 
 		</header>
-		<nav>
-		HALLOOOOOOOO
-		</nav>
 		<main>
-		Hope this work. 
+		Welcome to My Site
 		</main>
+		<p>
+		This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS
+		</p>
 		<footer>
-		AI PUNCHHHHHHHHHHHHHHHHHH
+		©2015 Nanthalak (Pim) JItnavasathien - CMIS Web Design
 		</footer>
 	</body>
 </html>
