--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
-		<header>
-		Nanthalak (Pim) JItnavasatien's Website 
-		</header>
-		<main>
+		<header><b><font size="7">
+		Nanthalak (Pim) Jitnavasatien's Website 
+		</font><b/></header>
+
+		<p><font size="5">
 		Welcome to My Site
-		</main>
+		</font></p>
 		<p>
 		This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS
 		</p>
