--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
-		<header><b><font size="7">
+		<h1>
 		Nanthalak (Pim) Jitnavasatien's Website 
-		</font><b/></header>
+		<h2>
 
-		<p><font size="5">
+		<h2>
 		Welcome to My Site
-		</font></p>
-		<p>
-		This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS
-		</p>
+		</h2>
+
+		<nav>
+		</nav>
+
+		<main>
+			<p>
+			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS
+			</p>
+		</main>
 		<footer>
 		©2015 Nanthalak (Pim) JItnavasathien - CMIS Web Design
 		</footer>
