--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 			Pimmy_jit
 		</title>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
+		<header>
 		<h1>
 		Nanthalak (Pim) Jitnavasatien's Website 
 		<h2>
+		</header>
 
 		<h2>
 		Welcome to My Site
