--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -10,22 +10,77 @@
 	<body>
 		<header>
 		<h1>
-		 Step by Step Instructions to Create a New Webpage on the Production Server</h1>
+			Unit 5: Assignment
+		</h1>
+		 	<p>
+				This assignment's goal is to prove to the teacher wheather we know how to create a webpage and run it in the computer, and as well as turing it in to the public page. We learn how to create an ordered list, unordered lists, and hwo to add in links into our webpage. Mr.Keiffer doesn't tell us exactly what to do but he lets us research it on our own. 
+			</p>
+		<h2>
+		 Step by Step Instructions to Create a New Webpage on the Production Server</h2>
 		</header>
-
+	<main>
 		<ol>
-			<li> Clone your repository</li>
+			<li>  
+				Clone your repository
+			</li>
 			<li> 
+				Go into your folder and create a new file (gedit 'filename.html' 
+			</li>
+			<li> 
+				Edit the file and save it 				</li>
+			<li> 
+				In Terminal, create a new file by using css (gedit 'filename'.css)  
+			</li>
+			<li> 
+				Edi the file and save it 
+			</li>
+			<li> 
+				Run the python on Terminal and open the website (localhost:8000)
+			</li>
+			<li> 
+				Validate it (https://validator.w3.org/)
+			</li>
+			<li>
+				Go back and fix the errors, starting from the top rows
+			</li>
+			<li>
+				In Terminal, get into Mr.Keiffer's computer by running the sftp (stfp student1234@cmis-hsteacher)
+			</li>
+			<li>
+				Get into public html folder (cd public_html) and put the file into it. (put 'filename')
+			</li>
 		</ol>
-
-
-		<nav>
-		</nav>
-
-		<main>
+	</main>
+		<h2>
+			Useful Websites
+		</h2>
+		
 			<p>
+				<ul>
+					<li><a href="http://www.w3schools.com/"> W3School 
+					</a></li>
+					<li><a href="https://validator.w3.org/"> Validator
+					</a></li>
+					<li><a href="http://www.tutorialspoint.com/html/html_lists.htm"> TutorialsPoints
+					</a></li>
+					<li><a href="http://learn.shayhowe.com/"> Learn to Code HTML&CSS
+					</a></li>
+					<li><a href="https://www.codecademy.com"> CodeCademy
+					</a></li>
+				</ul>
 			</p>
 		</main>
+		<nav>
+			<h3>
+				Links
+			</h3>
+			<ul>
+				<li><a href="localhost:8000"> Nanthalak (Pim) Jitnavasathien's Website
+				</a></li>
+				<li><a href="localhost:8000/listsandlinks"> ListsandLinks
+				</a></li>
+			</ul>
+		</nav>
 		<footer>
 		©2015 Nanthalak (Pim) JItnavasathien - CMIS Web Design
 		</footer>
