--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -14,6 +14,17 @@
 		</h1>
 		 	<p>
 				This assignment's goal is to prove to the teacher wheather we know how to create a webpage and run it in the computer, and as well as turing it in to the public page. We learn how to create an ordered list, unordered lists, and hwo to add in links into our webpage. Mr.Keiffer doesn't tell us exactly what to do but he lets us research it on our own. 
+				<ul>
+					<li> Create a new folder called "listsandlinks" in your repository folder</li>	
+					<li> Inside listsandlinks create a file called "index.html" and a file called "main.css"</li>
+					<li> In index.html create an ordered list of step by step instructions to create a new webpage on the production server.</li>
+					<li> Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+In the nav section, create an unordered list of links with a link back to your main index page.</li>
+					<li> In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".</li>
+					<li> Add an article with a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements.</li>
+					<li> Turn in your work.</li>
+					
+				</ul>
 			</p>
 		<h2>
 		 Step by Step Instructions to Create a New Webpage on the Production Server</h2>
