--- a/tables/index.html
+++ b/tables/index.html
@@ -26,95 +26,172 @@
 			<h2>
 				Simple Grid
 			</h2>
-			<p>
+		<p>
 			<table border="1" style="width:0%">
 				<thead>
-					<th> A </th>
-					<th> B </th>
-					<th> C </th>
+					<tr>
+						<th>
+							 A 
+						</th>
+						<th> 
+							B 
+						</th>
+						<th> 
+							C	 
+						</th>
+					</tr>
 				</thead>
 				<tbody>
-					<td> 1 </td>
-					<td> 2 </td>
-					<td> 3 </td>
+					<tr>
+						<td> 
+							1 
+						</td>
+						<td> 
+							2 
+						</td>
+						<td> 
+							3 
+						</td>
+					</tr>
+					<tr>
+						<td> 
+							4 
+						</td>
+						<td> 
+							5 
+						</td>
+						<td> 	
+							6 
+						</td>
+					</tr>
+					<tr>
+						<td> 7 </td>
+						<td> 8 </td>
+						<td> 9 </td>
+					</tr>
 				</tbody>
-				<tbody>
-					<td> 4 </td>
-					<td> 5 </td>
-					<td> 6 </td>
-				</tbody>
-				<tbody>
-					<td> 7 </td>
-					<td> 8 </td>
-					<td> 9 </td>
-				</tbody>
-				<tfooter>
-					<td> 12 </td>
-					<td> 15 </td>
-					<td> 18 </td>
-				</tfooter>
+				<tfoot>
+					<tr>
+						<td> 12 </td>
+						<td> 15 </td>
+						<td> 18 </td>
+					</tr>
+				</tfoot>
 			</table> 
 			</p>
 			
 			<h2>
 				Calendar
 			</h2>
-			<p1>
+				<p>
 				<table border="1" style="width:0%">
 				<thead>
-					<th colspan="7"> December 2015 </th>
-				</thead>
-				<thead>
-					<th> Mon </th>
-					<th> Tue </th>
-					<th> Wed </th>
-					<th> Thu </th>
-					<th> Fri </th>
-					<th> Sat </th>
+					<tr>
+						<th colspan="7"> December 2015 </th>
+					</tr>
 				</thead>
 				<tbody>
-					<td>  </td>
-					<td> 1 </td>
-					<td> 2 </td>
-					<td> 3 </td>
-					<td> 4 </td>
-					<td> 5 </td>
-					<td> 6 </td>
+					<tr>
+						<th> Mon </th>
+						<th> Tue </th>
+						<th> Wed </th>
+						<th> Thu </th>
+						<th> Fri </th>
+						<th> Sat </th>
+						<th> Sun </th>
+					</tr>
+					<tr>
+						<td>  </td>
+						<td> 1 </td>
+						<td> 2 </td>
+						<td> 3 </td>
+						<td> 4 </td>
+						<td> 5 </td>
+						<td> 6 </td>
+					</tr>
+					<tr>
+						<td> 7 </td>
+						<td> 8 </td>
+						<td> 9 </td>
+						<td> 10 </td>
+						<td> 11 </td>
+						<td> 12 </td>
+						<td> 13 </td>
+					</tr>
+					<tr>
+						<td> 14 </td>
+						<td> 15 </td>
+						<td> 16 </td>
+						<td> 17 </td>
+						<td> 18 </td>
+						<td> 19 </td>
+						<td> 20 </td>
+					</tr>
+					<tr>
+						<td> 14 </td>
+						<td> 15 </td>
+						<td> 16 </td>
+						<td> 17 </td>
+						<td> 18 </td>
+						<td> 19 </td>
+						<td> 20 </td>
+					</tr>
+					<tr>
+						<td> 21 </td>
+						<td> 22 </td>
+						<td> 23 </td>
+						<td> 24 </td>
+						<td> 25 </td>
+						<td> 26 </td>
+						<td> 27 </td>
+					</tr>
+					<tr>
+						<td> 28 </td>
+						<td> 29 </td>
+						<td> 30 </td>
+						<td> 31 </td>
+						<td>  </td>
+						<td>  </td>
+						<td>  </td>
+					</tr>
 				</tbody>
-				<tbody>
-					<td> 7 </td>
-					<td> 8 </td>
-					<td> 9 </td>
-					<td> 10 </td>
-					<td> 11 </td>
-					<td> 12 </td>
-					<td> 13 </td>
-				</tbody>
-				<tbody>
-					<td> 14 </td>
-					<td> 15 </td>
-					<td> 16 </td>
-					<td> 17 </td>
-					<td> 18 </td>
-					<td> 19 </td>
-					<td> 20 </td>
-				</tbody>
-				<tbody>
-					<td> 14 </td>
-					<td> 15 </td>
-					<td> 16 </td>
-					<td> 17 </td>
-					<td> 18 </td>
-					<td> 19 </td>
-					<td> 20 </td>
-				</tbody>
+				<tfoot>
+				<tr>
+					<td colspan="7"> Created by: Pim
+					</td>
+				</tr>
+				</tfoot>
+				</p>
 				</table>
-			
-		 	<p1>
-		
-			</p1>
-		
-			
+
+			<h2>
+				Class Schedule
+			</h2>
+			<p>
+			<table border="2" style="width:0%">
+				<thead>
+					<tr>
+						<th> Period </th>
+						<th> Class Info </th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th rowspan="2"> 1 </th>
+						<td> Mr.Kieffer </td>
+					</tr>
+					<tr>
+						<td> Computer Science </td>
+					</tr>
+					<tr>
+						<th rowspan="2"> 2 </th>
+						<td> Mr.Knox </td>
+					</tr>
+					<tr>
+						<td> History </td>
+					</tr>
+				</tbody>
+			</table>
 			</p>
 		</main>
 
