--- a/listsandlinks/index.html
+++ b/listsandlinks/index.html
@@ -5,7 +5,7 @@
 			Unit 5
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="box.css">
 	</head>
 	<body>
 		<header>
@@ -73,9 +73,9 @@
 				Links
 			</h3>
 			<ul>
-				<li><a href="localhost:8000"> Nanthalak (Pim) Jitnavasathien's Website
+				<li><a href=".."> Nanthalak (Pim) Jitnavasathien's Website
 				</a></li>
-				<li><a href="localhost:8000/listsandlinks"> ListsandLinks
+				<li><a href="../listsandlinks"> ListsandLinks
 				</a></li>
 			</ul>
 		</nav>
