--- a/tables/index.html
+++ b/tables/index.html
@@ -5,7 +5,7 @@
 			Tables
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="../css/box.css">
 	</head>
 	<body>
 		<header>
@@ -15,9 +15,9 @@
 		</header>
 		<p>
 			<ul>
-				<li> <a href="http://localhost:8000/"> Home
+				<li> <a href=".."> Home
 				 </a></li>
-				<li> <a href="http://localhost:8000/listsandlinks/"> List and Links 
+				<li> <a href="../listsandlinks/"> List and Links 
 				</a></li>
 			</ul>
 
