--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			Pimmy_jit
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="../css/box.css">
 	</head>
 	<body>
 		<header>
@@ -22,6 +22,10 @@
 		</nav>
 
 		<main>
+			<ul>
+				<li><a href="../tables"> Tables</li></a>
+				<li><a href="../listsandlinks"> Lists and Links</li></a>
+			</ul>
 			<h3>
 				Unit 5: Assignment
 			</h3>
@@ -57,7 +61,26 @@ In the nav section, create an unordered list of links with a link back to your m
 					</li>
 					<li> Turn in your work.
 					</li>
-					
+				</ul>
+				<h3>
+					Tables
+				<h3>
+				<h4>	
+					Requirements
+				</h4>
+				<ul>
+					<li>Create a new folder in your repository called "tables"</li>
+					<li>In the "tables" folder, create a new file called from your template "index.html"</li>
+					<li>Be sure to use thead, tbody, and tfoot elements in your tables.</li>
+					<li>Add html code to recreate the webpage below.</li>
+					<ul> 
+							<li>second table will require the use of the colspan attribute</li>
+							<li>third table will require the use of the rowspan attribute.</li>
+					</ul>
+					<li>In your repository index.html file, add an article with a heading, paragraph description and this list of requirements. Also add a link to the tables/index.html file. </li>
+					<li> Add a link from lists and links to this assignment as well.</li>
+					<li> Validate your code.</li>
+					<li> Turn it in </li>
 				</ul>
 			</p>
 		</main>
