--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -25,7 +25,7 @@
 			
 			<p> The first paragraph </p>
 
-			<p> The second paragraph </p>
+			<p1> The second paragraph </p1>
 
 		<p>
 			<table border="1" style="width:0%">
