--- a/final/catalog.html
+++ b/final/catalog.html
@@ -8,17 +8,17 @@
 		<link rel="stylesheet" type="text/css" href="../css/final.css">
 	</head>
 	<body>
-		<header>
+		<div class="header">
+		<img src="http://cdn.playbuzz.com/cdn/6eb513d0-aa4b-47bf-829a-4cda6e203ff1/5419d0e7-a380-4737-8c50-b07fb102131e_560_420.jpg" alt="logo"/>
 		<h1>
-		Nanthalak (Pim) Jitnavasatien's Website 
+		Kosmos
 		</h1>
-		</header>
-
-		<h2>
-		Welcome to My Site
-		</h2>
+		</div>
 
 		<nav>
+			<ul> 
+				<li> <a href="../catalog">Catalog</li></a>
+			</ul>
 		</nav>
 
 		<main>
@@ -29,3 +29,6 @@
 		</footer>
 	</body>
 </html>
+
+
+
