--- a/final/index.html
+++ b/final/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<header>
+		<img src="http://cdn.playbuzz.com/cdn/6eb513d0-aa4b-47bf-829a-4cda6e203ff1/5419d0e7-a380-4737-8c50-b07fb102131e_560_420.jpg" alt="logo">
 		<h1>
 		Kosmos
 		</h1>
