--- a/final/catalog.html
+++ b/final/catalog.html
@@ -59,8 +59,25 @@
 		<p>Price: $90M<br>Adrift in the Sea of Kimzar with no help in sight, the water wizard Koostow despaired that his latest magical experiment hadn't gone quite as he had planned. Much to his surprise, he was lifted from the icy waters on the back of an Aquamarine dragon and rescued. To return the favor, Koostow worked hard to make sure these dragons would be comfortable living on the Gemstone Island. Aquamarine dragons, like all gemstone dragons, cannot breed.</p>
 		
 		<h3>Others</h3>
+		
+		<h4>Griffins (Level: Common)</h4>
+		<img src="http://i216.photobucket.com/albums/cc235/Fenris_Lunocracy/RealisticGriffin.jpg" alt="Griffin">
+		<p>Price: $50M<br>Aelian said the wings of griffins were white and their necks were variegated in colour with blue feathers. The griffin claws were especially valuable as they were reputed to change color in the presence of poison, which is why they made useful drinking vessels.  At times, it is portrayed with a long snake-like tail. In some traditions, only the female has wings. Its nests are made of gold and its eggs resemble agates. It is supposed to be of gigantic proportions, the morphology being left to our own deduction after we have been informed that one claw is the size of a cow's horn. </p>
 		<main>
-			
+		
+		<h4>Chimera (Level:Rare) </h4>
+		<img src="http://static.giantbomb.com/uploads/original/1/17172/1374197-el_chimera_by_elshazam.jpg" alt="chimera">
+		<p>Price: $80M<br> From the Greek meaning "she-goat" the Chimera is a fire-breathing creature that has the body of a goat, the head of a lion and the tail of a serpent.  Some sources have represented the Chimera with three heads (the lion's head as the main, then the goat's head sprouted from its back, and the serpent's or Dragon’s head on its tail), but the popular myth tells of the single, fire-vomiting head. The very unlikely aspect of the chimera has gradually turned its name into a synonym of a vain dream.</p>
+		
+		<h4>Phoenix (Level: Super Rare)</h4>
+		<img src="http://www.tattoo.com/sites/default/files/field/image/tumblr_m4t5qvhwqx1r9jyoao1_1280.jpg" alt="Phoenix">
+		<p> Price: $90M<br> Its name comes from the Greek word for "purple" because the phoenix is associated with fire and the sun. It has been described as golden or multicolored. Some say it never eats. Others say it eats only dew. Most believe there is only one of its kind and it lives alone in Arabia or Ethiopia. All agree it is a bird of great beauty. The Phoenix enjoys immortality, which had to be renewed with fire every 300 to 500 years. When the end of its life cycle drew near, the phoenix would gather aromatic herbs, woods, and spices from around the world with which to build its own funeral pyre or nest.</p>
+		
+		<h4>Hippocampus (Level: Super Rare)</h4>
+		<img src="http://static.comicvine.com/uploads/original/1/15659/4218994-hippocampus-percy_jackson-sea_of_monsters-concept_art_by_sebastian_meyers-alt_design-.jpg" alt="SeaHorse">
+		<p>Price: $100M <br> HIPPOKAMPOI (or Hippocamps) were the horses of the sea. They were depicted as composite creatures with the head and fore-parts of a horse and the serpentine tail of a fish. In mosaic art they were often covered with green scales and had fish-fin manes and appendages. The ancients believed they were the adult-form of the fish we call the "sea-horse". Hippokampoi were the mounts of Nereid nymphs and sea-gods, and Poseidon drove a chariot drawn by two or four of the beasts.</p>
+		
+		
 		</main>
 		<footer>
 		©2015 Nanthalak (Pim) JItnavasathien - CMIS Web Design
