--- a/final/catalog.html
+++ b/final/catalog.html
@@ -2,13 +2,15 @@
 <html>
 	<head>
 		<title>
+			Kosmos
+		</title>
 		<div class="wrapper">
 	  		<div class="main">
     			<h1>Kosmos<h1>
   		</div>
 		</div>
 		
-		</title>
+		
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="../css/final.css">
 		<nav>
@@ -20,7 +22,7 @@
 	<body>
 	
 
-		<h3> Unicorn</h3>
+		<h2> Unicorn</h2>
 
 		<h4> Ruvas (Level: Common) </h4>
 		<img src="http://www.myangelcardreadings.com/images/unicorns.jpg" alt="uni">
@@ -34,7 +36,7 @@
 		<img src="https://wallpaperscraft.com/image/unicorn_water_forest_night_magic_68838_3840x2400.jpg" alt="Jewel"width="650" height="500">
 		<p>Price: $100M<br>There is one kind of unicorn that can fly, and it has wings and a horn. It is called a pegasus. They look like a normal bright unicorn only with wings. Their powers are to help all creatures. Whenever one of these unicorns is near you you will feel amazing! So if an animal of any kind is hurt or feels bad they will try to come by and help them to feel better. No one is exactly sure of where to find them, but they always seem to come save lives just when you need them!</p>
 
-		<h3>Dragons</h3>
+		<h2>Dragons</h2>
 		
 		<h4> Luminous (Level: Rare) </h4>
 		<img src="http://images2.fanpop.com/image/photos/8800000/Realistic-Charizard-Dragon-charizard-8808350-900-654.jpg" alt="Jewel" width="650" height="550">
@@ -57,10 +59,10 @@
 		<p>Price: $150M <br>An old tale from the Shimmering Isles describes a starry dragon that ferries travelers from one side of the sky to the other. It was long assumed that these stories were inspired by the Sorarian star, which traces a curvy path across the night, heedless of the other stars’ motions. With the coming of the Sorarian dragon, however, many have begun to wonder whether the subject of those stories was the star, or the dragon.</p>
 		
 		<h4>Aquamarine Dragon (Level: Rare)</h4>
-		<img src="http://yocreemipropiosite.weebly.com/uploads/3/8/0/5/38054539/1813159_orig.jpeg" alt="Aqua" width= "650" lenght="550">
+		<img src="http://yocreemipropiosite.weebly.com/uploads/3/8/0/5/38054539/1813159_orig.jpg" alt="Aqua" width= "650" lenght="550">
 		<p>Price: $90M<br>Adrift in the Sea of Kimzar with no help in sight, the water wizard Koostow despaired that his latest magical experiment hadn't gone quite as he had planned. Much to his surprise, he was lifted from the icy waters on the back of an Aquamarine dragon and rescued. To return the favor, Koostow worked hard to make sure these dragons would be comfortable living on the Gemstone Island. Aquamarine dragons, like all gemstone dragons, cannot breed.</p>
 		
-		<h3>Others</h3>
+		<h2>Others</h2>
 		
 		<h4>Griffins (Level: Common)</h4>
 		<img src="http://i216.photobucket.com/albums/cc235/Fenris_Lunocracy/RealisticGriffin.jpg" alt="Griffin" width="675" lenght="640">
@@ -88,8 +90,9 @@
 		<p>Price: $190M <br> Kitsune are from Japanese folklore and are Japanese foxes. A kitsune can have up to nine tails, depending on its age, wisdom and power. The only way to kill a kitsune is to cut off all of its tails, as it is said that one of the tails is its main tail and the source of all its power. Not knowing which tail is the main one, one would have to cut off all its tails to kill it.One, five, seven, and nine tails are the most common numbers in folk stories. When a kitsune gains its ninth tail, its fur becomes white or gold. A kitsune is a shapeshifter, and usually when it reaches the age of 100 years, it learn the ability to take on a human form. Thus, they have to be a fox for a hundred years before it can shapeshift from a fox to a human and back again. It is also said that a kitsune can duplicate other human beings, in other words shapeshift into the look-a-likes of different people. </p>
 		
 		<h4>Pegasus (Level: Common)</h4>
-		<img src="http://onlyfreewallpaper.com/walls/pegasus-HD.jpg" alt="Pegasus" width="650" height="400>
-		<p>Price: $55M<br> The winged horse was also placed amongst the stars as a constellation, whose rising marked the arrival of the warmer weather of spring and seasonal rainstorms. As such he was often named thunderbolt-bearer of Zeus. In the constellation myths, Pegasos ("Springing Forth") may have represented the blooming of spring whilst Khimaira ("Frosty Air" ?) (perhaps winter-rising Capricorn) was the cold chill of winter.</p>
+		<img src="http://onlyfreewallpaper.com/walls/pegasus-HD.jpg" alt="Pegasus" width="650" height="400">
+		<p>Price: $55M<br> The winged horse was also placed amongst the stars as a constellation, whose rising marked the arrival of the warmer weather of spring and seasonal rainstorms. As such he was often named thunderbolt-bearer of Zeus. In the constellation myths, Pegasos may have represented the blooming of spring whilst Khimairawas the cold chill of winter.</p>
+
 		</main>
 		<footer>
 		©2015 Nanthalak (Pim) JItnavasathien - CMIS Web Design
