--- a/final/index.html
+++ b/final/index.html
@@ -5,7 +5,7 @@
 			
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/final.css">
+		<link rel="stylesheet" type="text/css" href="../final/final.css">
 	</head>
 	<body>
 		<header>
