--- a/final/catalog.html
+++ b/final/catalog.html
@@ -20,12 +20,18 @@
 		
 		<nav>
 			<ul> 
-				<li> <a href="../catalog">Catalog</li></a>
+				<li> 
+					<a href="../catalog"> 
+							Catalog <img src="http://i.imgur.com/FwGKf3V.gif" alt="drapoke" width="30" height="30">
+					</a>
+				</li>
+				<li> <a href="../final"> Home<img src="http://static.tumblr.com/935680938176c1b55d869d529bb2a98f/hbztznf/pXJnq06x6/tumblr_static_dt9nqiqconc40wss8g0kkko8s.gif" alt="poke" width="40" height="40"></a></li>
 			</ul>
 		</nav>
 	
 	
 		<main>
+		<p>
 			
 		<table border="1" style="width 25%">
 			
@@ -120,7 +126,7 @@
 		</tbody>
 		
 			<tr>
-				</th>
+				<th>
 					<h2>Others</h2>
 				</th>
 			</tr>
