--- a/final/catalog.html
+++ b/final/catalog.html
@@ -12,10 +12,7 @@
 	<body>	
 	
 		<header>
-		<img src="../final/kosmos.jpg" alt="logo">
-		<h1>
-			Kosmos
-		</h1>
+		<img src="https://gm1.ggpht.com/skhB1eVp7tYWzP88kp0r78dnLSb9ppNQWuvTHHoWCcUxDuEEuF7gK5BqBv6UDBBmtE4z-kz74fXqYZ-WLYERsm5Kwh5NaE-SHwL6r8W8IoZod4c4zFGad_oAQfeeEPFvrZH9rk3tpplAZ9pGTyxjZHB7-Z_fzwXn6SW_tGvn84vjVf2Iwn3-PcB1HeSNouw5op6cVCY0pzyl5OBE2r8bPD-qJ_P80ZwY3WcTs7eNEiCj9ialCiAwiqjCJ87CfgOmUlXyMahuyU2IN3mB44d4tyLA31bGGZBfDVgBXFCM-wQhdrtMhSqRQrpSimHnx7pK8VmLe_34fMHgHrU3qoSi3eqTtSSUKmnpDwFUsRc3TN_TQpLamnpYcAei36YpReBCkFEZqcn7JQyEUo_MlNZpMcwcWFuTq44WVsHMgB1DSLD_FggKq4Bs2S2mLYvhO4EJmLNpSJMLQ--3A1vtVCkCaLe5wTSBH7qiDwABUHB2zMyvZQbouTAUzu7z2dE-fh2bUF0Yu-lq1XuI5qAReN4NbVnpQAqShsHyj9eHkMH1VXP3ejtfS6jhjLvBqjcoDY2ZThvt_mnDdy2yQ1qwvbeo6rMJIGGZ-XqNwJw6d4-JmIjI2w53viqqI5j7W8jh13SxYgDxYPmTrmBxgSal6Tp-OJCt1Zh-jkrL2WY8D5511Bc=w822-h164-l75-ft" alt="logo" height="150" width="1000">
 		</header>
 		
 		<nav>
