--- a/final/catalog.html
+++ b/final/catalog.html
@@ -115,7 +115,7 @@
 			<tr>
 				<td>
 					<h4>Aquamarine Dragon (Level: Rare)</h4>
-					<img src="http://yocreemipropiosite.weebly.com/uploads/3/8/0/5/38054539/1813159_orig.jpg" alt="Aqua" width= "650" lenght="550">
+					<img src="http://yocreemipropiosite.weebly.com/uploads/3/8/0/5/38054539/1813159_orig.jpeg" alt="Aqua" width= "650" lenght="550">
 					<p>Price: $90M<br>Adrift in the Sea of Kimzar with no help in sight, the water wizard Koostow despaired that his latest magical experiment hadn't gone quite as he had planned. Much to his surprise, he was lifted from the icy waters on the back of an Aquamarine dragon and rescued. To return the favor, Koostow worked hard to make sure these dragons would be comfortable living on the Gemstone Island. Aquamarine dragons, like all gemstone dragons, cannot breed.</p>
 				</td>
 			</tr>
