--- a/final/catalog.html
+++ b/final/catalog.html
@@ -5,24 +5,26 @@
 			Kosmos
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../css/final.css">
+		<link rel="stylesheet" type="text/css" href="../final/final.css">
 	</head>
 		
 		
 	<body>	
 	
 		<header>
-		<img src="https://gm1.ggpht.com/skhB1eVp7tYWzP88kp0r78dnLSb9ppNQWuvTHHoWCcUxDuEEuF7gK5BqBv6UDBBmtE4z-kz74fXqYZ-WLYERsm5Kwh5NaE-SHwL6r8W8IoZod4c4zFGad_oAQfeeEPFvrZH9rk3tpplAZ9pGTyxjZHB7-Z_fzwXn6SW_tGvn84vjVf2Iwn3-PcB1HeSNouw5op6cVCY0pzyl5OBE2r8bPD-qJ_P80ZwY3WcTs7eNEiCj9ialCiAwiqjCJ87CfgOmUlXyMahuyU2IN3mB44d4tyLA31bGGZBfDVgBXFCM-wQhdrtMhSqRQrpSimHnx7pK8VmLe_34fMHgHrU3qoSi3eqTtSSUKmnpDwFUsRc3TN_TQpLamnpYcAei36YpReBCkFEZqcn7JQyEUo_MlNZpMcwcWFuTq44WVsHMgB1DSLD_FggKq4Bs2S2mLYvhO4EJmLNpSJMLQ--3A1vtVCkCaLe5wTSBH7qiDwABUHB2zMyvZQbouTAUzu7z2dE-fh2bUF0Yu-lq1XuI5qAReN4NbVnpQAqShsHyj9eHkMH1VXP3ejtfS6jhjLvBqjcoDY2ZThvt_mnDdy2yQ1qwvbeo6rMJIGGZ-XqNwJw6d4-JmIjI2w53viqqI5j7W8jh13SxYgDxYPmTrmBxgSal6Tp-OJCt1Zh-jkrL2WY8D5511Bc=w822-h164-l75-ft" alt="logo" height="150" width="1000">
+		<img src="../final/pictures/logo.png" alt="logo" height="150" width="1000">
 		</header>
 		
 		<nav>
 			<ul> 
+				<li> <a href="../final"> Home<img src="http://static.tumblr.com/935680938176c1b55d869d529bb2a98f/hbztznf/pXJnq06x6/tumblr_static_dt9nqiqconc40wss8g0kkko8s.gif" alt="poke" width="40" height="40"></a></li>
 				<li> 
-					<a href="../catalog"> 
+					<a href="../final/catalog.html"> 
 							Catalog <img src="http://i.imgur.com/FwGKf3V.gif" alt="drapoke" width="30" height="30">
 					</a>
 				</li>
-				<li> <a href="../final"> Home<img src="http://static.tumblr.com/935680938176c1b55d869d529bb2a98f/hbztznf/pXJnq06x6/tumblr_static_dt9nqiqconc40wss8g0kkko8s.gif" alt="poke" width="40" height="40"></a></li>
+				<li> <a href="../index.html"> About Us <img src="http://45.media.tumblr.com/927365f0bbdd1f3d2f852bac8759f89b/tumblr_mh8a7wx1WG1rfjowdo1_r2_500.gif" alt="About"  width="40" height="40"></a></li>
+				<li> <a href="../index.html">Contact <img src="http://static.tumblr.com/1b9c82cdc937c955c676ee62daeee4a1/kybgj40/oksmgcsd3/tumblr_static_tumblr_mgc0hk1xgu1s1mxlko1_400.gif" alt="fire" width="30" height="30"></a> </li>
 			</ul>
 		</nav>
 	
@@ -157,7 +159,7 @@
 			<tr>
 				<td>
 					<h4>Hippocampus (Level: Super Rare)</h4>
-					<img src="../final/pictures/Hippocampus.jpg" alt="SeaHorse" width="700" height="380">>
+					<img src="../final/pictures/Hippocampus.jpg" alt="SeaHorse" width="750" height="330">
 					<p>Price: $100M <br> HIPPOKAMPOI (or Hippocamps) were the horses of the sea. They were depicted as composite creatures with the head and fore-parts of a horse and the serpentine tail of a fish. In mosaic art they were often covered with green scales and had fish-fin manes and appendages. The ancients believed they were the adult-form of the fish we call the "sea-horse". Hippokampoi were the mounts of Nereid nymphs and sea-gods, and Poseidon drove a chariot drawn by two or four of the beasts.</p>
 				</td>
 			</tr>
