--- a/final/index.html
+++ b/final/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<header>
-		<img src="https://gm1.ggpht.com/skhB1eVp7tYWzP88kp0r78dnLSb9ppNQWuvTHHoWCcUxDuEEuF7gK5BqBv6UDBBmtE4z-kz74fXqYZ-WLYERsm5Kwh5NaE-SHwL6r8W8IoZod4c4zFGad_oAQfeeEPFvrZH9rk3tpplAZ9pGTyxjZHB7-Z_fzwXn6SW_tGvn84vjVf2Iwn3-PcB1HeSNouw5op6cVCY0pzyl5OBE2r8bPD-qJ_P80ZwY3WcTs7eNEiCj9ialCiAwiqjCJ87CfgOmUlXyMahuyU2IN3mB44d4tyLA31bGGZBfDVgBXFCM-wQhdrtMhSqRQrpSimHnx7pK8VmLe_34fMHgHrU3qoSi3eqTtSSUKmnpDwFUsRc3TN_TQpLamnpYcAei36YpReBCkFEZqcn7JQyEUo_MlNZpMcwcWFuTq44WVsHMgB1DSLD_FggKq4Bs2S2mLYvhO4EJmLNpSJMLQ--3A1vtVCkCaLe5wTSBH7qiDwABUHB2zMyvZQbouTAUzu7z2dE-fh2bUF0Yu-lq1XuI5qAReN4NbVnpQAqShsHyj9eHkMH1VXP3ejtfS6jhjLvBqjcoDY2ZThvt_mnDdy2yQ1qwvbeo6rMJIGGZ-XqNwJw6d4-JmIjI2w53viqqI5j7W8jh13SxYgDxYPmTrmBxgSal6Tp-OJCt1Zh-jkrL2WY8D5511Bc=w822-h164-l75-ft" alt="logo" height="150" width="1000">
+		<img src="../final/pictures/logo.png" alt="logo" height="150" width="1000">
 		Kosmos
 		</header>
 		
@@ -18,11 +18,14 @@
 		<nav>
 			<ul> 
 				<li> 
-					<a href="../catalog"> 
+					<li> <a href="../final"> Home<img src="http://static.tumblr.com/935680938176c1b55d869d529bb2a98f/hbztznf/pXJnq06x6/tumblr_static_dt9nqiqconc40wss8g0kkko8s.gif" alt="poke" width="40" height="40"></a></li>
+				<li> 
+					<a href="../final/catalog.html"> 
 							Catalog <img src="http://i.imgur.com/FwGKf3V.gif" alt="drapoke" width="30" height="30">
 					</a>
 				</li>
-				<li> <a href="../final"> Home<img src="http://static.tumblr.com/935680938176c1b55d869d529bb2a98f/hbztznf/pXJnq06x6/tumblr_static_dt9nqiqconc40wss8g0kkko8s.gif" alt="poke" width="40" height="40"></a></li>
+				<li><a href="../index.html"> About Us <img src="http://45.media.tumblr.com/927365f0bbdd1f3d2f852bac8759f89b/tumblr_mh8a7wx1WG1rfjowdo1_r2_500.gif" alt="About"  width="40" height="40"></a></li>
+				<li><a href="../index.html"> Contact <img src="http://static.tumblr.com/1b9c82cdc937c955c676ee62daeee4a1/kybgj40/oksmgcsd3/tumblr_static_tumblr_mgc0hk1xgu1s1mxlko1_400.gif" alt="fire" width="30" height="30"></a></li>
 			</ul>
 		</nav>
 
@@ -31,7 +34,7 @@
 			Welcome to the Fantasy World where you can get your own rare mythical creatures. These creatures are imported by our own wizards and witches by portals. There are no other place where you can buy them except for here. Any creatures that you may think of, Dragons, Griffins, Faries, Unicorns, Werewolves, Chimeras, etc. Each of them comes with their own unique characteristics and personalities. Their breeds have been authofied and their health checked by our own mythical doctors. 
 			</p>
 			
-			<img src="http://vignette2.wikia.nocookie.net/fairytailfanon/images/9/9c/Jin_Daisenko_-_Magic_Circle_Rune.png/revision/latest?cb=20150210173902" alt="wizard" width="300" height="300">
+			<img src="../final/pictures/wizard.png" alt="wizard" width="300" height="300">
 			
 			<br class="clear">
 
